syntax = "proto3";

package kratos.conf;

option go_package = "github.com/aesoper101/kratos-utils/protobuf/types/confpb;confpb";

import "google/protobuf/duration.proto";

message HTTP {
  string network = 1;
  string addr = 2;
  google.protobuf.Duration timeout = 3;
  PprofSettings pprof = 4;
  MetricsSettings metrics = 5;
  SwaggerSettings swagger = 6;
}

message GRPC {
  string network = 1;
  string addr = 2;
  google.protobuf.Duration timeout = 3;
}

message MetricsSettings {
  bool enabled = 1;
  string handle = 2;
}

message SwaggerSettings {
  bool enabled = 1;
  string handle = 2;
}

message PprofSettings {
  bool enabled = 1;
  string prefix = 2;
}